@@ -9,6 +9,7 @@
 * The capture for "?trigger" is no longer case-sensitive
 * Fixed a bug relating to dates in the DatabaseEditor
 * Added SOCKS4 support
+* Handle SID_CHATEVENT EID_BROADCAST
 
 2.1.0 (r1640) 2008-10-06:
 * Added BotNet account login
